feat: Persistence. Not to lose the game if browser is closed
* Persistence. Not to lose the game if browser is closed

--- a/src/app/containers/board.css
+++ b/src/app/containers/board.css
@@ -1,3 +1,13 @@
 .board__container {
   background-color: transparent;
 }
+
+.board-stats__container {
+  display: block;
+  padding: 20px 2px;
+}
+
+.board-stats__container button {
+  float: right;
+  cursor: pointer;
+}
